# maurer

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
benches/: benches.rs
src/: aggregation.rs  committment_of_discrete_log.rs  discrete_log_ratio_of_committed_values.rs  equality_between_commitments_with_different_public_parameters.rs  knowledge_of_decommitment.rs  knowledge_of_discrete_log.rs  language.rs  lib.rs  proof.rs  vector_commitment_of_discrete_log.rs
src/aggregation/: commitment_round.rs  decommitment_round.rs  proof_aggregation_round.rs  proof_share_round.rs
src/proof/: fischlin.rs
