[package]
name = "maurer"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
crypto-bigint = { version = "0.5", features = ["rand_core", "serde"], default-features = false }
merlin = { version = "3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
group = { git = "https://github.com/dwallet-labs/group.git", branch = "batch_normalize" }
proof = { git = "https://github.com/dwallet-labs/proof.git", rev = "3a6411bcd76202aca2fa496ce2eb3351595e8282" }
commitment = { git = "https://github.com/dwallet-labs/commitment.git", branch = "tmp" }
thiserror = "1.0"

criterion = { version = "0.5", features = ["html_reports"], optional = true }
rand_core = { version = "0.6", features = ["std"], optional = true }
rstest = { version = "0.18", optional = true }

[dev-dependencies]
rand_core = { version = "0.6", features = ["std"] }

[features]
test_helpers = ["dep:criterion", "dep:rand_core", "dep:rstest", "proof/test_helpers"]
benchmarking = ["test_helpers"]

